<resources>
    <string name="app_name">project1</string>
    <string name="user_id">ID</string>
    <string name="Button_Register">Register</string>
    <string name="password">Password</string>
    <string name="id">Email</string>
    <string name="coursename">CourseName</string>
    <string name="CourseName">Course Name</string>
    <string name="CourseCode">Course Code</string>
    <string name="OfferingSessions">Offering Sessions</string>
    <string name="Prerequisites">Prerequisites</string>
    <string name="admin_adding_course">Admin Adding Course</string>
    <string name="add_btn">ADD</string>
    <string name="btn_add">ADD</string>
    <string name="add">ADD</string>
    <string name="title_activity_admin">AdminActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>